# voice-controlled-llm-app

./: .black  .env.example  .flake8  .gitignore  Dockerfile  FILE_STRUCTURE.md  IMPROVEMENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: models.yaml
docs/: api.md  architecture.md
docs/examples/: basic_usage.py  batch_processing.py  custom_chains.py
scripts/: deploy.sh  setup.sh  test.sh
src/: app.py  main.py  voice_llm.py  web.py
src/api/: openai_client.py  tts.py  whisper.py
src/audio/: player.py  processor.py  recorder.py
src/llm/: __init__.py  chains.py  memory.py  prompts.py
src/utils/: config.py  exceptions.py  helpers.py  logger.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_api.py  test_audio.py  test_llm.py  test_utils.py  test_voice_llm.py  test_web.py
