[project]
name = "voice-controlled-llm-app"
version = "0.1.0"
description = "A multimodal AI application for voice-to-voice conversations with LLMs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Samuel Justin Ifiezibe", email = "sammyjayisthename@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "langchain>=0.1.16,<0.2.0",
    "langchain-core>=0.1.0,<0.2.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "openai>=1.30.1",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
streamlit = [
    "streamlit>=1.35.0",
]

[project.scripts]
voice-llm = "src.main:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

# ─── Black Formatter ───
[tool.black]
line-length = 88
target-version = ["py312"]

# ─── isort Import Sorting ───
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]

# ─── Pytest ───
[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Marks a test as a unit test.",
    "integration: Marks a test as an integration test (may require external services).",
    "slow: Marks a test as slow-running.",
]

# ─── Mypy Type Checking ───
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
